--- a/calcnochart.html
+++ b/calcnochart.html
@@ -13,7 +13,6 @@
             flex-direction: column;
             align-items: center;
             margin: 0;
-            background: linear-gradient(0deg, #343434, #181818);
             color: #FFFFFF;
             padding: 20px;
         }
@@ -139,18 +138,22 @@
         #monthlyBreakdown {
             margin-top: 20px;
             overflow-x: auto;
+            border-radius: 30px;
+            border: 2px solid #7DB667;
         }
 
         #breakdownTable {
             width: 100%;
-            border-collapse: collapse;
+            border-collapse:collapse;
             background-color: #FFFFFF;
-            color: #000000;
+            color: #7DB667;
+            border-radius: 30px;
         }
 
         #breakdownTable th, #breakdownTable td {
-            border: 1px solid #ddd;
-            padding: 8px;
+            border: 1px solid #7DB667;
+            border-radius: 30px;
+            padding: 18px;
             text-align: center;
             color: #000000;
         }
