--- a/index.html
+++ b/index.html
@@ -185,6 +185,14 @@
                 padding: 6px;
                 font-size: 14px;
             }
+            .chart-container{
+                max-width: 310px;
+                width: 100%;
+            }
+            .values{
+                max-width: 310px;
+                width: 100%;
+            }
         }
 
     </style>
