--- a/index.html
+++ b/index.html
@@ -303,6 +303,11 @@
             <p style="text-align: center; font-size: 0.9em; color: #888;">Feito pela MonqueiTech</p>
         </div>
 
+    <div id="banner" style="display: none; text-align: center; margin-top: 20px;">
+        <a href="https://example.com">
+            <img src="https://plus.unsplash.com/premium_photo-1686685571688-e2a2d9035811?q=80&w=1634&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" width="50%" alt="Banner">
+        </a>
+    </div>
 
     <div class="values">
         <div id="finalValue"></div>
@@ -376,12 +381,23 @@
             document.getElementById('totalInterest').innerText = '';
             document.querySelector('#breakdownTable tbody').innerHTML = '';
             document.getElementById('resultsDiv').style.display = 'none';
+            document.getElementById('banner').style.display = 'none';
         }
 
         function applyCurrencyMask(element) {
             let value = element.value.replace(/\D/g, '');
             value = (parseInt(value) / 100).toFixed(2);
             element.value = formatCurrency(parseFloat(value));
+            checkBannerDisplay();
+        }
+
+        function checkBannerDisplay() {
+            const initialAmount = parseCurrency(document.getElementById('initialAmount').value);
+            if (initialAmount >= 350000) {
+                document.getElementById('banner').style.display = 'block';
+            } else {
+                document.getElementById('banner').style.display = 'none';
+            }
         }
 
         async function calculate() {
