--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 
     <div id="banner" style="display: none; text-align: center; margin-top: 20px;">
         <a href="https://example.com">
-            <img src="https://plus.unsplash.com/premium_photo-1686685571688-e2a2d9035811?q=80&w=1634&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" width="50%" alt="Banner">
+            <img src="https://plus.unsplash.com/premium_photo-1686685571688-e2a2d9035811?q=80&w=1634&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" width="1200px" height="300px" alt="Banner">
         </a>
     </div>
 
